--- a/about.css
+++ b/about.css
@@ -1,12 +1,48 @@
-body{
+body {
     background-color: #151515;
     height: 100%;
-    display: flex;
-    align-content: center;
     color: white;
+    margin: 20; /* Remove default margin */
 }
 
-html
-{
+html {
     height: 100%;
 }
+
+.contents {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 80%; /* Set the width to 80% of the viewport width */
+    max-width: 1200px; /* Set a maximum width for larger screens */
+    margin: 0 auto; /* Center the container horizontally */
+}
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 100px; /* Increase gap for more space between divs */
+    margin-top: 200px;
+}
+
+.div1 {
+    grid-area: 1 / 1 / 2 / 4;
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+}
+
+img {
+    margin-bottom: 20px; /* Add margin to images for spacing */
+
+}
+
+h1, p
+{
+    text-align: center;
+}
+
+.div2 { grid-area: 2 / 1 / 3 / 2; }
+.div3 { grid-area: 2 / 2 / 3 / 3; }
+.div4 { grid-area: 2 / 3 / 3 / 4; }
