--- a/index.css
+++ b/index.css
@@ -22,6 +22,27 @@
     background: linear-gradient(to right, #29ecd3, #fe2355);
     border-radius: 10px; /* Same border-radius as the main button */
   }
+
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .div1 
+    {
+       grid-area: 1 / 1 / 2 / 2; 
+      }
+    .div2 {
+       grid-area: 1 / 2 / 2 / 3; 
+      }
+    .div3 {
+       grid-area: 1 / 3 / 2 / 4; 
+      }
+    .div4 { 
+      grid-area: 1 / 4 / 2 / 5; }
   
   .button span {
     position: relative;
@@ -62,6 +83,31 @@ h2
     margin-bottom: 5px;
 }
 
+.project {
+  height: 100px;
+  margin: 80px;
+  padding-bottom: 375px;
+  -webkit-box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+  color: white;
+
+  /* Gradient Border */
+  border: 3px solid transparent; /* Set an initial transparent border */
+  background-clip: padding-box; /* Make sure the background color does not extend into the border area */
+  border-image: linear-gradient(90deg, #29ecd3, #fe2355) 1;
+  border-image-slice: 1;
+
+  /* Border Radius */
+  border-radius: 20px;
+}
+
+.projectimg
+{
+  height: 300px;
+  width: 300px;
+}
+
+
 body {
     margin: 0;
     height: 100%;
@@ -99,6 +145,10 @@ align-items: flex-start; /* Align items at the start (top) */
 }
 
 .div2 {
-grid-area: 2 / 1 / 3 / 2;
-background-color: #1c1c1c; /* Add background color for visibility */
+  grid-area: 2 / 1 / 3 / 2;
+  background-color: #1c1c1c;
+  display: grid;
+  align-content: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px; /* Adjust the gap between grid items as needed */
 }
