--- a/Styles/about.css
+++ b/Styles/about.css
@@ -2,7 +2,6 @@ body {
     background-color: #151515;
     height: 100%;
     color: white;
-    margin: 20; /* Remove default margin */
 }
 
 html {
@@ -22,20 +21,13 @@ html {
 .parent {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 0.25fr, 1fr;
     gap: 100px; /* Increase gap for more space between divs */
-    margin-top: 200px;
-}
-
-.div1 {
-    grid-area: 1 / 1 / 2 / 4;
-    display: flex;
-    flex-direction: column; /* Stack items vertically */
+    margin-left: 200px;
 }
 
 img {
     margin-bottom: 20px; /* Add margin to images for spacing */
-
 }
 
 h1, p
@@ -43,6 +35,23 @@ h1, p
     text-align: center;
 }
 
+.image
+{
+    background-color: white;
+    padding-top: 65px;
+    padding-bottom: 25px;
+    padding-left: 40px;
+    padding-right: 40px;
+    color: black;
+}
+
+.div1 
+{ 
+    grid-area: 1 / 1 / 2 / 4; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .div2 { grid-area: 2 / 1 / 3 / 2; }
 .div3 { grid-area: 2 / 2 / 3 / 3; }
 .div4 { grid-area: 2 / 3 / 3 / 4; }
