--- a/Styles/index.css
+++ b/Styles/index.css
@@ -31,10 +31,6 @@
     grid-row-gap: 0px;
     }
     
-    .div1 
-    {
-       grid-area: 1 / 1 / 2 / 2; 
-      }
     .div2 {
        grid-area: 1 / 2 / 2 / 3; 
       }
@@ -48,8 +44,6 @@
     position: relative;
     z-index: 1;
   }
-  
-
 
 .text h1
 {
@@ -86,7 +80,10 @@ h2
 .project {
   height: 100px;
   margin: 80px;
-  padding-bottom: 375px;
+  margin-top: 40px;
+  padding-bottom: 200px;
+  padding-left: 15px;
+  padding-right: 15px;
   -webkit-box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
   color: white;
@@ -103,8 +100,17 @@ h2
 
 .projectimg
 {
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 200px;
+}
+
+.div2 {
+  grid-area: 2 / 1 / 3 / 2;
+  background-color: #1c1c1c;
+  display: grid;
+  align-content: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px; /* Adjust the gap between grid items as needed */
 }
 
 
@@ -122,16 +128,17 @@ html
 }
 
 .content {
-    margin-left: 200px;
-    height: 100%;
-    padding: 0px;
-    text-align: center;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr; /* Two rows with equal height */
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  }
+  margin-left: 200px;
+  height: 100%;
+  padding: 0px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto; /* Change this line to make the rows adjust to content height */
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
 
 .div1 {
 grid-area: 1 / 1 / 2 / 2;
@@ -144,11 +151,3 @@ flex-direction: column; /* Align items vertically */
 align-items: flex-start; /* Align items at the start (top) */
 }
 
-.div2 {
-  grid-area: 2 / 1 / 3 / 2;
-  background-color: #1c1c1c;
-  display: grid;
-  align-content: center;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px; /* Adjust the gap between grid items as needed */
-}
