--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,4 +1,8 @@
-.button {
+/* Default styles for screens with Full HD resolution and above (1920x1080) */
+
+@media (min-width: 1700px) and (max-width: 3000px) {
+  /* Add your alternative styles for lower resolutions here */
+  .button {
     display: inline-block;
     padding: 20px 60px;
     color: white;
@@ -22,132 +26,464 @@
     background: linear-gradient(to right, #29ecd3, #fe2355);
     border-radius: 10px; /* Same border-radius as the main button */
   }
-
+  
   .parent {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    }
-    
-    .div2 {
-       grid-area: 1 / 2 / 2 / 3; 
-      }
-    .div3 {
-       grid-area: 1 / 3 / 2 / 4; 
-      }
-    .div4 { 
-      grid-area: 1 / 4 / 2 / 5; }
+  }
+  
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  
+  .div4 {
+    grid-area: 1 / 4 / 2 / 5;
+  }
   
   .button span {
     position: relative;
     z-index: 1;
   }
-
-.text h1
-{
+  
+  .text h1 {
     font-size: 2.5em;
     margin-top: 0px;
     margin-bottom: 10px;
-}
-
-
-.text
-{
+  }
+  
+  .text {
     text-align: left;
-}
-
-.htmltext
-{
+  }
+  
+  .htmltext {
     color: #222222;
     font-family: 'Caveat', cursive;
-}
-
-
-.name
-{
+  }
+  
+  .name {
     display: flex;
-    flex:  auto;
-}
-
-h2
-{
+    flex: auto;
+  }
+  
+  h2 {
     margin: 0px;
     margin-bottom: 5px;
-}
-
-.project {
-  height: 100px;
-  margin: 80px;
-  margin-top: 40px;
-  padding-bottom: 200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  -webkit-box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
-  color: white;
-
-  /* Gradient Border */
-  border: 3px solid transparent; /* Set an initial transparent border */
-  background-clip: padding-box; /* Make sure the background color does not extend into the border area */
-  border-image: linear-gradient(90deg, #29ecd3, #fe2355) 1;
-  border-image-slice: 1;
-
-  /* Border Radius */
-  border-radius: 20px;
-}
-
-.projectimg
-{
-  height: 200px;
-  width: 200px;
-}
-
-.div2 {
-  grid-area: 2 / 1 / 3 / 2;
-  background-color: #1c1c1c;
-  display: grid;
-  align-content: center;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px; /* Adjust the gap between grid items as needed */
-}
-
-
-body {
+  }
+  
+  .project {
+    height: 100px;
+    margin: 80px;
+    margin-top: 40px;
+    padding-bottom: 200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    -webkit-box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+    color: white;
+  
+    /* Gradient Border */
+    border: 3px solid transparent; /* Set an initial transparent border */
+    background-clip: padding-box; /* Make sure the background color does not extend into the border area */
+    border-image: linear-gradient(90deg, #29ecd3, #fe2355) 1;
+    border-image-slice: 1;
+  
+    /* Border Radius */
+    border-radius: 20px;
+  }
+  
+  .projectimg {
+    height: 200px;
+    width: 200px;
+  }
+  
+  .div2 {
+    grid-area: 2 / 1 / 3 / 2;
+    background-color: #1c1c1c;
+    display: grid;
+    align-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px; /* Adjust the gap between grid items as needed */
+  }
+  
+  body {
     margin: 0;
     height: 100%;
     font-family: Arial, sans-serif;
     background-color: #151515;
     overflow: hidden;
-}
-
-html
-{
+  }
+  
+  html {
     height: 100%;
+  }
+  
+  .content {
+    margin-left: 200px;
+    height: 100%;
+    padding: 0px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto; /* Change this line to make the rows adjust to content height */
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-color: #0e0e0e;
+    color: white;
+    padding-left: 100px;
+    align-content: start;
+    display: flex;
+    flex-direction: column; /* Align items vertically */
+    align-items: flex-start; /* Align items at the start (top) */
+  }
+
 }
 
-.content {
-  margin-left: 200px;
-  height: 100%;
-  padding: 0px;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto; /* Change this line to make the rows adjust to content height */
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+
+/* Media query for lower resolutions */
+@media (max-width: 1300px) {
+  /* Add your alternative styles for lower resolutions here */
+  .button {
+    display: inline-block;
+    padding: 10px 30px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid; /* Set a base solid border */
+    border-image: linear-gradient(to right, #29ecd3, #fe2355);
+    border-image-slice: 1; /* Make the border slice cover the entire border */
+    border-radius: 10px; /* Adjust the border-radius to change the level of rounding */
+  }
+  
+  .button::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    z-index: -1;
+    background: linear-gradient(to right, #29ecd3, #fe2355);
+    border-radius: 10px; /* Same border-radius as the main button */
+  }
+  
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  
+  .div4 {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+  
+  .button span {
+    position: relative;
+    z-index: 1;
+  }
+  
+  .text h1 {
+    font-size: 1.5em;
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
+  
+  .text {
+    text-align: left;
+  }
+  
+  .htmltext {
+    color: #222222;
+    font-family: 'Caveat', cursive;
+    font-size: 0.9em;
+  }
+  
+  .name {
+    display: flex;
+    flex: auto;
+  }
+  
+  h2 {
+    margin: 0px;
+    margin-bottom: 5px;
+  }
+  
+  .project {
+    height: 75px;
+    padding-bottom: 100px;
+    -webkit-box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+    color: white;
+  
+    /* Gradient Border */
+    border: 3px solid transparent; /* Set an initial transparent border */
+    background-clip: padding-box; /* Make sure the background color does not extend into the border area */
+    border-image: linear-gradient(90deg, #29ecd3, #fe2355) 1;
+    border-image-slice: 1;
+  
+    /* Border Radius */
+    border-radius: 20px;
+  }
+  
+  .projectimg {
+    height: 100px;
+    width: 100px;
+  }
+  
+  .div2 {
+    grid-area: 2 / 1 / 3 / 2;
+    background-color: #1c1c1c;
+    display: grid;
+    align-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 50px; /* Adjust the gap between grid items as needed */
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  
+  body {
+    margin: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    background-color: #151515;
+    overflow: hidden;
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  .content {
+    margin-left: 200px;
+    height: 100%;
+    padding: 0px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto; /* Change this line to make the rows adjust to content height */
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-color: #0e0e0e;
+    color: white;
+    padding-left: 100px;
+    align-content: start;
+    display: flex;
+    flex-direction: column; /* Align items vertically */
+    align-items: flex-start; /* Align items at the start (top) */
+  }
+
 }
 
+@media (min-width: 1300px) and (max-width: 1650px) {
+  /* Add your alternative styles for lower resolutions here */
+  .button {
+    display: inline-block;
+    padding: 15px 45px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid; /* Set a base solid border */
+    border-image: linear-gradient(to right, #29ecd3, #fe2355);
+    border-image-slice: 1; /* Make the border slice cover the entire border */
+    border-radius: 10px; /* Adjust the border-radius to change the level of rounding */
+  }
+  
+  .button::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    z-index: -1;
+    background: linear-gradient(to right, #29ecd3, #fe2355);
+    border-radius: 10px; /* Same border-radius as the main button */
+  }
+  
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  
+  .div4 {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+  
+  .button span {
+    position: relative;
+    z-index: 1;
+  }
+  
+  .text h1 {
+    font-size: 2em;
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
+  
+  .text {
+    text-align: left;
+  }
+  
+  .htmltext {
+    color: #222222;
+    font-family: 'Caveat', cursive;
+    font-size: 1.1em;
+  }
+  
+  .name {
+    display: flex;
+    flex: auto;
+  }
+  
+  h2 {
+    margin: 0px;
+    margin-bottom: 5px;
+  }
+  
+  .project {
+    height: 125px;
+    padding-bottom: 100px;
+    -webkit-box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 17px 5px rgba(0, 0, 0, 0.25);
+    color: white;
+  
+    /* Gradient Border */
+    border: 3px solid transparent; /* Set an initial transparent border */
+    background-clip: padding-box; /* Make sure the background color does not extend into the border area */
+    border-image: linear-gradient(90deg, #29ecd3, #fe2355) 1;
+    border-image-slice: 1;
+  
+    /* Border Radius */
+    border-radius: 20px;
+  }
+  
+  .projectimg {
+    height: 150px;
+    width: 150px;
+  }
+  
+  .div2 {
+    grid-area: 2 / 1 / 3 / 2;
+    background-color: #1c1c1c;
+    display: grid;
+    align-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 50px; /* Adjust the gap between grid items as needed */
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  
+  body {
+    margin: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    background-color: #151515;
+    overflow: hidden;
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  .content {
+    margin-left: 200px;
+    height: 100%;
+    padding: 0px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto; /* Change this line to make the rows adjust to content height */
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-color: #0e0e0e;
+    color: white;
+    padding-left: 100px;
+    align-content: start;
+    display: flex;
+    flex-direction: column; /* Align items vertically */
+    align-items: flex-start; /* Align items at the start (top) */
+    margin-bottom: -160px;
+  }
 
-.div1 {
-grid-area: 1 / 1 / 2 / 2;
-background-color: #0e0e0e;
-color: white;
-padding-left: 100px;
-align-content: start;
-display: flex;
-flex-direction: column; /* Align items vertically */
-align-items: flex-start; /* Align items at the start (top) */
 }
 
+@media (max-width: 1299px)
+  {
+    .htmltext {
+      color: #222222;
+      font-family: 'Caveat', cursive;
+      font-size: 0.8em;
+    }
+
+    .text h1 {
+      font-size: 1.2em;
+      margin-top: 0px;
+      margin-bottom: 10px;
+    }
+
+    .button {
+      display: inline-block;
+      padding: 10px 30px;
+      color: white;
+      text-decoration: none;
+      text-align: center;
+      cursor: pointer;
+      border: 1px solid; /* Set a base solid border */
+      border-image: linear-gradient(to right, #29ecd3, #fe2355);
+      border-image-slice: 1; /* Make the border slice cover the entire border */
+      border-radius: 10px; /* Adjust the border-radius to change the level of rounding */
+    }
+
+    .div1 {
+      grid-area: 1 / 1 / 2 / 2;
+      background-color: #0e0e0e;
+      color: white;
+      padding-left: 100px;
+      align-content: start;
+      display: flex;
+      flex-direction: column; /* Align items vertically */
+      align-items: flex-start; /* Align items at the start (top) */
+      margin-bottom: -100px;
+    }
+  }
